--- a/_includes/sections/call_for_paper.html
+++ b/_includes/sections/call_for_paper.html
@@ -7,8 +7,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-8 text-center m-t-lg m-b-lg wow zoomIn">
-            <p><font size="4px"><span data-i18n="about_me.des"> We call for novel and unpublished work in the format of long papers (14 pages excluding references) and short papers (4 pages). Papers should follow the ECCV proceedings style and will be reviewed in a double-blind fashion. Accepted papers will be presented at the workshop either as a poster or as an oral talk. Only long papers will be published in the ECCV workshop proceedings. </span></font></p>
+        <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg wow zoomIn">
+            <p><font size="4px"><span data-i18n="about_me.des"> We call for novel and unpublished work in the format of long papers (14 pages excluding references) and short papers (4 pages). Papers should follow the ECCV proceedings style and will be reviewed in a double-blind fashion. Accepted papers will be presented at the workshop either as a poster or as an oral talk. Only long papers will be published in the ECCV workshop proceedings. All submissions will be handled electronically via the OpenReview conference submission website https://openreview.net/group?id=thecvf.com/ECCV/2024/Workshop/ILR. </span></font></p>
         </div>
     </div>
 </div>
