--- a/_includes/sections/call_for_paper.html
+++ b/_includes/sections/call_for_paper.html
@@ -11,7 +11,7 @@
             <p><font size="4px"><span data-i18n="about_me.des"> We call for novel and unpublished work in the format of long papers (14 pages excluding references) and short papers (4 pages). Papers should follow the ECCV proceedings style and will be reviewed in a double-blind fashion. Accepted papers will be presented at the workshop either as a poster or as an oral talk. Only long papers will be published in the ECCV workshop proceedings. All submissions will be handled electronically via the <a href="https://openreview.net/group?id=thecvf.com/ECCV/2024/Workshop/ILR" target="_blank"><span class="navy">OpenReview conference submission website</span></a>. </span></font></p>
          </div>
          <div class="col-lg-8 col-lg-offset-4 m-t-lg m-b-lg wow zoomIn">
-            <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Topics of interest include <b> </span></font></p>
+            <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Topics of interest include </span></font></p>
             <li>particular object/event retrieval</li>
             <li>instance-level object classification, detection and pose estimation</li>
             <li>image matching and video tracking</li>
