--- a/_includes/sections/call_for_paper.html
+++ b/_includes/sections/call_for_paper.html
@@ -23,6 +23,13 @@
             <li>ILR datasets</li>
             <li>leveraging Vision-Language-Models (VLM) to solve ILR problems</li>
             <li>visual geo-localization</li>
+         </div>
+         <div class="col-lg-8 col-lg-offset-3 m-t-lg m-b-lg wow zoomIn">
+            <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Important Dates </span></font></p>
+            <li>Submission deadline: July 25th, 2024</li>
+            <li>Paper notification: August 8th, 2024</li>
+            <li>Camera-ready deadline: August 15th, 2024</li>
+            <li>Workshop date: September 30th, 2024</li>
         </div>
     </div>
 </div>
