--- a/_includes/sections/call_for_paper.html
+++ b/_includes/sections/call_for_paper.html
@@ -24,12 +24,12 @@
             <li>leveraging Vision-Language-Models (VLM) to solve ILR problems</li>
             <li>visual geo-localization</li>
          </div>
-         <div class="col-lg-8 col-lg-offset-3 m-t-lg m-b-lg wow zoomIn">
+         <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Important Dates </span></font></p>
-            <li>Submission deadline: July 25th, 2024</li>
-            <li>Paper notification: August 8th, 2024</li>
-            <li>Camera-ready deadline: August 15th, 2024</li>
-            <li>Workshop date: September 30th, 2024</li>
+            <li><font size="4px">Submission deadline: July 25th, 2024</font</li>
+            <li><font size="4px">Paper notification: August 8th, 2024</font</li>
+            <li><font size="4px">Camera-ready deadline: August 15th, 2024</font</li>
+            <li><font size="4px">Workshop date: September 30th, 2024</font</li>
         </div>
     </div>
 </div>
