--- a/_includes/sections/call_for_paper.html
+++ b/_includes/sections/call_for_paper.html
@@ -10,26 +10,26 @@
         <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px"><span data-i18n="about_me.des"> We call for novel and unpublished work in the format of long papers (14 pages excluding references) and short papers (4 pages). Papers should follow the ECCV proceedings style and will be reviewed in a double-blind fashion. Accepted papers will be presented at the workshop either as a poster or as an oral talk. Only long papers will be published in the ECCV workshop proceedings. All submissions will be handled electronically via the <a href="https://openreview.net/group?id=thecvf.com/ECCV/2024/Workshop/ILR" target="_blank"><span class="navy">OpenReview conference submission website</span></a>. </span></font></p>
          </div>
-         <div class="col-lg-8 col-lg-offset-3 m-t-lg m-b-lg wow zoomIn">
+         <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Topics of interest include </span></font></p>
-            <li>particular object/event retrieval</li>
-            <li>instance-level object classification, detection and pose estimation</li>
-            <li>image matching and video tracking</li>
-            <li>instance-level image generation</li>
-            <li>other ILR applications</li>
-            <li>universal feature learning for instance-level recognition</li>
-            <li>challenges in ILR, such has long-tail distribution and open vocabulary</li>
-            <li>evaluation of large-scale ILR system</li>
-            <li>ILR datasets</li>
-            <li>leveraging Vision-Language-Models (VLM) to solve ILR problems</li>
-            <li>visual geo-localization</li>
+            <li><font size="3px">particular object/event retrieval</font></li>
+            <li><font size="3px">instance-level object classification, detection and pose estimation</font></li>
+            <li><font size="3px">image matching and video tracking</font></li>
+            <li><font size="3px">instance-level image generation</font></li>
+            <li><font size="3px">other ILR applications</font></li>
+            <li><font size="3px">universal feature learning for instance-level recognition</font></li>
+            <li><font size="3px">challenges in ILR, such has long-tail distribution and open vocabulary</font></li>
+            <li><font size="3px">evaluation of large-scale ILR system</font></li>
+            <li><font size="3px">ILR datasets</font></li>
+            <li><font size="3px">leveraging Vision-Language-Models (VLM) to solve ILR problems</font></li>
+            <li><font size="3px">visual geo-localization</font></li>
          </div>
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Important Dates </span></font></p>
-            <li><font size="4px">Submission deadline: July 25th, 2024</font</li>
-            <li><font size="4px">Paper notification: August 8th, 2024</font</li>
-            <li><font size="4px">Camera-ready deadline: August 15th, 2024</font</li>
-            <li><font size="4px">Workshop date: September 30th, 2024</font</li>
+            <li><font size="3px">Submission deadline: July 25th, 2024</font></li>
+            <li><font size="3px">Paper notification: August 8th, 2024</font></li>
+            <li><font size="3px">Camera-ready deadline: August 15th, 2024</font></li>
+            <li><font size="3px">Workshop date: September 30th, 2024</font></li>
         </div>
     </div>
 </div>
