--- a/_includes/sections/call_for_paper.html
+++ b/_includes/sections/call_for_paper.html
@@ -31,5 +31,8 @@
             <li><font size="3px">Camera-ready deadline: August 15th, 2024</font></li>
             <li><font size="3px">Workshop date: September 30th, 2024</font></li>
         </div>
+        <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
+            <p><font size="4px" color="#000000"><span data-i18n="about_me.des"> Questions? Please reach out to us at ilr-workshop@googlegroups.com </span></font></p>
+        </div>
     </div>
 </div>
