--- a/_includes/sections/call_for_paper.html
+++ b/_includes/sections/call_for_paper.html
@@ -2,7 +2,7 @@
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
-            <h1><span data-i18n="about_me.about_me">Call For Paper</span></h1>
+            <h1><span data-i18n="about_me.about_me">Call For Papers</span></h1>
             <!-- <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p> -->
         </div>
     </div>
@@ -32,7 +32,7 @@
             <li><font size="3px">Workshop date: September 30th, 2024</font></li>
         </div>
         <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
-            <p><font size="4px" color="#000000"><span data-i18n="about_me.des"> Questions? Please reach out to us at ilr-workshop@googlegroups.com </span></font></p>
+            <p><font size="4px" color="#000000"><span data-i18n="about_me.des"> Questions? Please reach out to us at <a href= "mailto: ilr-workshop@googlegroups.com"> ilr-workshop@googlegroups.com </a> </span></font></p>
         </div>
     </div>
 </div>
