--- a/_includes/sections/call_for_paper.html
+++ b/_includes/sections/call_for_paper.html
@@ -22,7 +22,7 @@
             <li><font size="3px">evaluation of large-scale ILR system</font></li>
             <li><font size="3px">ILR datasets</font></li>
             <li><font size="3px">leveraging Vision-Language-Models (VLM) to solve ILR problems</font></li>
-            <li><font size="3px">visual geo-localization</font></li>
+            <li><font size="3px">visual geo-localization</font></li> <br />
             <p><font size="3px" color="#000000"><span data-i18n="about_me.des">  The task of person re-identification clearly falls within our definition of ILR. Nevertheless, because of its social implications, we intentionally omit it from the list of topics. </span></font></p>
          </div>
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
