--- a/_includes/sections/accepted_papers.html
+++ b/_includes/sections/accepted_papers.html
@@ -9,18 +9,18 @@
     <div class="row">
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Long Papers </span></font></p>
-            <li><font size="3px">Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation <br>
+            <li><font size="3px"><font color="#000000">Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation</font><br>
               Francisco Eiras, Kemal Oksuz, Adel Bibi, Philip Torr, Puneet K. Dokania </font></li>
-            <li><font size="3px">Leveraging Object Priors for Point Tracking <br>
+            <li><font size="3px"><font color="#000000">Leveraging Object Priors for Point Tracking</font><br>
               Bikram Boote, Ngoc Anh Thai, Wenqi Jia, Ozgur Kara, Stefan Stojanov, James Matthew Rehg, Sangmin Lee</font></li>
          </div>
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Short Papers </span></font></p>
-            <li><font size="3px">Image Re-ranking with Long-Context Sequence Modeling <br>
+            <li><font size="3px"><font color="#000000">Image Re-ranking with Long-Context Sequence Modeling </font><br>
 Zilin Xiao, Ayush Sachdeva, Hao-Jen Wang, Vicente Ordonez</font></li>
-            <li><font size="3px">Promptable Iterative Visual Refinement for Video Instance Segmentation <br>
+            <li><font size="3px"><font color="#000000">Promptable Iterative Visual Refinement for Video Instance Segmentation </font><br>
 Tuyen Tran, Thao Minh Le, Truyen Tran</font></li>
-            <li><font size="3px">Continual Hyperbolic Learning of Instances and Classes <br>
+            <li><font size="3px"><font color="#000000">Continual Hyperbolic Learning of Instances and Classes </font><br>
 Melika Ayoughi, Mina Ghadimi Atigh, Mohammad Mahdi Derakhshani, Cees G. M. Snoek, Pascal Mettes, Paul Groth</font></li>
         </div>
     </div>
