--- a/_includes/sections/accepted_papers.html
+++ b/_includes/sections/accepted_papers.html
@@ -9,19 +9,19 @@
     <div class="row">
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Long Papers </span></font></p>
-            <li><font size="3px"><b><font color="#000000">Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation</font></b><br>
-              Francisco Eiras, Kemal Oksuz, Adel Bibi, Philip Torr, Puneet K. Dokania </font></li>
-            <li><font size="2.5px"><b><font color="#000000">Leveraging Object Priors for Point Tracking</font></b><br>
-              Bikram Boote, Ngoc Anh Thai, Wenqi Jia, Ozgur Kara, Stefan Stojanov, James Matthew Rehg, Sangmin Lee</font></li>
+            <li><b><font size="3px" color="#000000">Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation</font></b><br>
+<font size="2.7px">Francisco Eiras, Kemal Oksuz, Adel Bibi, Philip Torr, Puneet K. Dokania </font></li>
+            <li><b><font size="3px" color="#000000">Leveraging Object Priors for Point Tracking</font></b><br>
+<font size="2.7px">Bikram Boote, Ngoc Anh Thai, Wenqi Jia, Ozgur Kara, Stefan Stojanov, James Matthew Rehg, Sangmin Lee</font></li>
          </div>
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Short Papers </span></font></p>
-            <li><font size="3px"><b><font color="#000000">Image Re-ranking with Long-Context Sequence Modeling </font></b><br>
-Zilin Xiao, Ayush Sachdeva, Hao-Jen Wang, Vicente Ordonez</font></li>
-            <li><font size="3px"><b><font color="#000000">Promptable Iterative Visual Refinement for Video Instance Segmentation </font></b><br>
-Tuyen Tran, Thao Minh Le, Truyen Tran</font></li>
-            <li><font size="2.5px"><b><font color="#000000">Continual Hyperbolic Learning of Instances and Classes </font></b><br>
-Melika Ayoughi, Mina Ghadimi Atigh, Mohammad Mahdi Derakhshani, Cees G. M. Snoek, Pascal Mettes, Paul Groth</font></li>
+            <li><b><font size="3px" color="#000000">Image Re-ranking with Long-Context Sequence Modeling </font></b><br>
+<font size="2.7px">Zilin Xiao, Ayush Sachdeva, Hao-Jen Wang, Vicente Ordonez</font></li>
+            <li><b><font size="3px" color="#000000">Promptable Iterative Visual Refinement for Video Instance Segmentation </font></b><br>
+<font size="2.7px">Tuyen Tran, Thao Minh Le, Truyen Tran</font></li>
+            <li><b><font size="3px" color="#000000">Continual Hyperbolic Learning of Instances and Classes </font></b><br>
+<font size="2.7px">Melika Ayoughi, Mina Ghadimi Atigh, Mohammad Mahdi Derakhshani, Cees G. M. Snoek, Pascal Mettes, Paul Groth</font></li>
         </div>
     </div>
 </div>
