--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -3,7 +3,7 @@
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
             <h1><span data-i18n="about_me.about_me">Instance-Level Recognition Workshop at ECCV'24</span></h1>
-            <h1><span data-i18n="about_me.about_me"><font color="#CC3299">Workshop Location: Amber 5</font></span></h1>
+            <h1><span data-i18n="about_me.about_me"><b><font color="#CC3299">Workshop Location: Amber 5</font></b></span></h1>
             <!-- <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p> -->
         </div>
     </div>
