--- a/_includes/sections/timetable.html
+++ b/_includes/sections/timetable.html
@@ -22,7 +22,7 @@
                             <li> <span data-i18n="timetable.{{ timetable.desc.i18n }}">{{ timetable.desc.detail }} </span> <br />
                             <li> <span data-i18n="timetable.{{ timetable.desc.i18n }}">{{ timetable.desc.detail1 }} </span> <br />
                         </ul>
-                        {% elif timetable.desc.detail %}
+                        {% else %}
                         <p><span data-i18n="timetable.{{ timetable.desc.i18n }}">{{ timetable.desc.detail }} </span> <br />
                         {% endif %}
                         {% if timetable.desc.title %}
