--- a/_includes/sections/timetable.html
+++ b/_includes/sections/timetable.html
@@ -19,7 +19,7 @@
                         {% if timetable.desc.detail1 %}
                         <p>
                         <ul>
-                            <li> <span data-i18n="timetable.{{ timetable.desc.i18n }}">{{ timetable.desc.detail }} </span> <br />
+                            <li> <span data-i18n="timetable.{{ timetable.desc.i18n }}">Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation </span> <br />
                             <li> <span data-i18n="timetable.{{ timetable.desc.i18n }}">{{ timetable.desc.detail1 }} </span> <br />
                         </ul>
                         {% else %}
