--- a/_includes/sections/invited_papers.html
+++ b/_includes/sections/invited_papers.html
@@ -8,11 +8,11 @@
     </div>
     <div class="row">
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
-            <li><font size="3px" color="#000000">Grounding Language Models for Visual Entity Recognition</font><br>
+            <li><font size="3px" color="#000000">Grounding Language Models for Visual Entity Recognition</font> <font size="3px" color="#FF0000">(Oral)</font><br>
 <font size="2.8px">Zilin Xiao, Ming Gong, Paola Cascante-Bonilla, Xingyao Zhang, Jie Wu, Vicente Ordonez</font></li>
-            <li><font size="3px" color="#000000">PetFace: A Large-Scale Dataset and Benchmark for Animal Identification</font><br>
+            <li><font size="3px" color="#000000">PetFace: A Large-Scale Dataset and Benchmark for Animal Identification</font> <font size="3px" color="#FF0000">(Oral)</font><br>
 <font size="2.8px">Risa Shinoda, Kaede Shiohara</font></li>
-            <li><font size="3px" color="#000000">MeshVPR: Citywide Visual Place Recognition Using 3D Meshes</font><br>
+            <li><font size="3px" color="#000000">MeshVPR: Citywide Visual Place Recognition Using 3D Meshes</font> <font size="3px" color="#FF0000">(Oral)</font><br>
 <font size="2.8px">Gabriele Berton, Lorenz Junglas, Riccardo Zaccone, Thomas Pollok, Barbara Caputo, Carlo Masone</font></li>
             <li><font size="3px" color="#000000">AMES: Asymmetric and Memory-Efficient Similarity Estimation for Instance-level Retrieval</font><br>
 <font size="2.8px">Pavel Suma, Giorgos Kordopatis-Zilos, Ahmet Iscen, Giorgos Tolias</font></li>
