--- a/_includes/sections/accepted_papers.html
+++ b/_includes/sections/accepted_papers.html
@@ -9,9 +9,9 @@
     <div class="row">
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
             <p><font size="4px" color="#000000"><span data-i18n="about_me.des">  Long Papers </span></font></p>
-            <li><font size="3px" color="#000000">Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation</font><br>
+            <li><font size="3px" color="#000000">Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation</font> <font size="3px" color="#FF0000">(Oral)</font><br>
 <font size="2.8px">Francisco Eiras, Kemal Oksuz, Adel Bibi, Philip Torr, Puneet K. Dokania </font></li>
-            <li><font size="3px" color="#000000">Leveraging Object Priors for Point Tracking</font><br>
+            <li><font size="3px" color="#000000">Leveraging Object Priors for Point Tracking</font> <font size="3px" color="#FF0000">(Oral)</font><br>
 <font size="2.8px">Bikram Boote, Ngoc Anh Thai, Wenqi Jia, Ozgur Kara, Stefan Stojanov, James Matthew Rehg, Sangmin Lee</font></li>
          </div>
          <div class="col-lg-8 col-lg-offset-2 m-t-lg m-b-lg wow zoomIn">
