--- a/_includes/sections/timetable.html
+++ b/_includes/sections/timetable.html
@@ -29,7 +29,7 @@
                             <li> <span data-i18n="timetable.{{ timetable.desc.i18n }}">Segment, Select, Correct: A Framework for Weakly-Supervised Referring Segmentation </span> <br />
                             <li> <span data-i18n="timetable.{{ timetable.desc.i18n }}">{{ timetable.desc.detail1 }} </span> <br />
                         </ul>
-                        {% else if timetable.desc.detail %}
+                        {% else %}
                         <p><span data-i18n="timetable.{{ timetable.desc.i18n }}">{{ timetable.desc.detail }} </span> <br />
                         {% endif %}
                         {% if timetable.desc.title %}
